# flight-plan

./: build.sh  pyproject.toml  s.zshrc
mysite/: settings.py  urls.py  wsgi.py
render/: admin.py  classes.py  forecast.py  forms.py  pattern.py  urls.py  views.py
render/migrations/: 0001_initial.py  0002_alter_plan_landing_dir_alter_plan_pattern.py  0003_plan_final_drop.py
render/templates/render/: form.html  get-input.html  index.html
